--- a/dummy.html
+++ b/dummy.html
@@ -5,7 +5,7 @@ Details of Adithya
 </title>
 </head>
 <body>
-<h1> Adithya</h1>
+<h1> Adithya kumar ch </h1>
 <h2>B.Tech </h2>
 <h3> JNTUHCEJ</h3>
 <h4> Kondagattu</h4>
